fix layout bug for small display

--- a/src/Project/Project.css
+++ b/src/Project/Project.css
@@ -1,9 +1,11 @@
 .project {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
+    width: 100%;
+    max-width: 769px;
     margin-top: 120px;
+    margin-bottom: 2rem;
 }
 
 .project__image {
@@ -17,8 +19,6 @@
     background-color: RGB(13, 17, 23);
     border-radius: 6px;
     width: 100%;
-    /* margin: 1rem; */
-    /* width: 90%; */
     text-align: left;
     padding: 0 32px 32px 32px;
     border: solid var(--github-border-color) 1px;
@@ -61,6 +61,7 @@ ol {
 
 .project__markdown a {
     color: var(--github-anchor-color);
+    text-decoration: none;
 }
 
 .project__markdown code {
@@ -70,4 +71,11 @@ ol {
     font-size: 85%;
     overflow: auto;
     line-height: 1.45;
+}
+
+@media only screen and (min-width: 769px) {
+    .profile__icon {
+        font-size: 2rem;
+        width: 2rem;
+    }
 }
